--- a/src/assets/css/roomInfo.css
+++ b/src/assets/css/roomInfo.css
@@ -1,14 +1,16 @@
 .appointment-card {
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 20px auto;
+    padding: 10px 20px;
+    width: 90%;
     background-color: #294250;
     color: white;
-    gap: 3em;
-    padding: 0.5em;
-    margin: 0.25em;
-    border-radius: 7px;
+    font-size: 1.3rem;
 }
 
-.appointment-person{
+.appointment-card .people-amount{
     float: right;
 }
 
